--- a/webconsole/changelog.txt
+++ b/webconsole/changelog.txt
@@ -2,6 +2,7 @@ Changes from 4.2.12 to 4.2.14
 -----------------------------
 ** Bug
     * [FELIX-5042] - Get system bundle by location, not number for global bundle list
+    * [FELIX-5060] - Unnecessary import of org.osgi.service.component
 
 
 Changes from 4.2.10 to 4.2.12
