--- a/dependencymanager/release/resources/changelog.txt
+++ b/dependencymanager/release/resources/changelog.txt
@@ -11,6 +11,7 @@ Release Notes - Felix - Version org.apache.felix.dependencymanager-r6
     * [FELIX-4922] - Simplify DM changelog management 
     * [FELIX-5054] - Clean-up instance bound dependencies when component is destroyed
     * [FELIX-5055] - Upgrade DM to BndTools 3.0.0
+    * [FELIX-5104] - Call a conf dependency callback Instance with an instantiated component
 
 Release Notes - Felix - Version  org.apache.felix.dependencymanager-r5:
 ======================================================================
