--- a/pom/changelog.txt
+++ b/pom/changelog.txt
@@ -1,3 +1,9 @@
+Changes from 3 to 4
+-------------------
+** Improvement
+    * [FELIX-5157] - Add m2e lifecycle mappings
+
+
 Changes from 2.1 to 3
 ---------------------
 
