--- a/utils/doc/changelog.txt
+++ b/utils/doc/changelog.txt
@@ -1,3 +1,8 @@
+Changes from 1.8.0 to 1.8.2
+---------------------------
+** Bug
+    * [FELIX-5156] - Felix Properties doesn't handle multi value properties correctly
+
 Changes from 1.6.0 to 1.8.0
 ---------------------------
 ** Bug
