--- a/deploymentadmin/deploymentadmin/changelog.txt
+++ b/deploymentadmin/deploymentadmin/changelog.txt
@@ -1,5 +1,19 @@
+Release 0.9.8
+-------------
+
+FELIX-4912 Upgrade autoconf to Dependency Manager 4
+FELIX-4719 SnapshotCommand never properly restores archived data-areas
+FELIX-4718 SnapshotCommand creates invalid snapshot archives
+FELIX-4491 ResourceProcessors should be optional for processed resources
+FELIX-4486 Possible thread leakage in DA
+FELIX-4485 Incorrect version of exported API
+FELIX-4484 uninstall incorrectly marks a DP as stale when its uninstallation fails
+FELIX-518  Wrong processing order of Localization-, Bundle and Processed-Resources
+FELIX-3780 Allow using configuration admin in addition to system properties
+
 Release 0.9.6
 -------------
+
 FELIX-1835 Installing of deployment package fails if has it's bundles in subdirectory
 FELIX-4409 Improve exception messages to be more explicit and helpful
 FELIX-4410 Exceptions during rollback are not always properly handled
