--- a/tools/maven-scr-plugin/changelog.txt
+++ b/tools/maven-scr-plugin/changelog.txt
@@ -1,3 +1,9 @@
+Changes from 1.22.0 to 1.21.0
+-----------------------------
+** Bug
+    * [FELIX-5118] - Exception when running on jdk9-ea
+
+
 Changes from 1.21.0 to 1.20.0
 -----------------------------
 ** Improvement
