--- a/tools/org.apache.felix.scr.annotations/changelog.txt
+++ b/tools/org.apache.felix.scr.annotations/changelog.txt
@@ -1,3 +1,9 @@
+Changes from 1.11.0 to 1.10.0
+-----------------------------
+** Bug
+    * [FELIX-5304] - SERVICE_PID property should not be created
+
+
 Changes from 1.10.0 to 1.9.12
 -----------------------------
 ** Improvement
