--- a/tools/org.apache.felix.scr.generator/changelog.txt
+++ b/tools/org.apache.felix.scr.generator/changelog.txt
@@ -1,3 +1,9 @@
+Changes from 1.15.0 to 1.14.0
+-----------------------------
+** Bug
+    * [FELIX-5304] - SERVICE_PID property should not be created
+
+
 Changes from 1.14.0 to 1.13.0 
 -----------------------------
 ** Bug
