--- a/tools/org.apache.felix.scr.annotations/changelog.txt
+++ b/tools/org.apache.felix.scr.annotations/changelog.txt
@@ -1,3 +1,8 @@
+Changes from 1.12.0 to 1.11.0
+-----------------------------
+** Improvement
+    * [FELIX-5350] - Deprecate SCR Annotations
+
 Changes from 1.11.0 to 1.10.0
 -----------------------------
 ** Bug
