--- a/tools/org.apache.felix.scr.generator/changelog.txt
+++ b/tools/org.apache.felix.scr.generator/changelog.txt
@@ -2,6 +2,7 @@ Changes from 1.15.0 to 1.14.0
 -----------------------------
 ** Bug
     * [FELIX-5304] - SERVICE_PID property should not be created
+    * [FELIX-5328] - NoClassDefFound not wrapped in the ClassScanner
 
 
 Changes from 1.14.0 to 1.13.0 
