--- a/tools/org.apache.felix.scr.generator/changelog.txt
+++ b/tools/org.apache.felix.scr.generator/changelog.txt
@@ -3,6 +3,7 @@ Changes from 1.15.0 to 1.14.0
 ** Bug
     * [FELIX-5304] - SERVICE_PID property should not be created
     * [FELIX-5328] - NoClassDefFound not wrapped in the ClassScanner
+    * [FELIX-5345] - Incorrect encoding in metatype props file
 
 
 Changes from 1.14.0 to 1.13.0 
