--- a/tools/org.apache.felix.scr.ant/changelog.txt
+++ b/tools/org.apache.felix.scr.ant/changelog.txt
@@ -1,3 +1,11 @@
+Changes from 1.16.0 to 1.15.0
+-----------------------------
+** Bug
+    * [FELIX-5304] - SERVICE_PID property should not be created
+    * [FELIX-5328] - NoClassDefFound not wrapped in the ClassScanner
+    * [FELIX-5345] - Incorrect encoding in metatype props file
+
+
 Changes from 1.15.0 to 1.14.0
 -----------------------------
 ** Bug
