--- a/tools/org.apache.felix.scr.bnd/changelog.txt
+++ b/tools/org.apache.felix.scr.bnd/changelog.txt
@@ -1,3 +1,11 @@
+Changes from 1.6.0 to 1.5.0
+---------------------------
+** Bug
+    * [FELIX-5304] - SERVICE_PID property should not be created
+    * [FELIX-5328] - NoClassDefFound not wrapped in the ClassScanner
+    * [FELIX-5345] - Incorrect encoding in metatype props file
+
+
 Changes from 1.5.0 to 1.4.0
 ---------------------------
 ** Improvement
